fixed chart breaking, now using from=, to= instead of countBack

--- a/backtest_ohlc_frontend/public/index.html
+++ b/backtest_ohlc_frontend/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
-		<title>FinSage MTM</title>
+		<title>Backtest Data</title>
 	</head>
 	<body>
 		<noscript>
